--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "homepage": "https://github.com/pkdiv/Password-Manager#readme",
   "dependencies": {
-    "electron": "^13.0.1"
+    "electron": "^13.0.1",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   }
 }
