--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "electron": "^13.0.1",
     "express": "^4.17.1",
+    "n-readlines": "^1.0.1",
     "nodemon": "^2.0.7"
   }
 }
